# microtaskrr

./: .gitignore  LICENSE  README.md  install.sh  package-lock.json  package.json  uninstall.sh  vite.config.js
.github/: FUNDING.yml
.github/workflows/: release.yml
hooks/: claude-settings.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/js/: app.js  stats.js
src/js/data/: words.js
src/js/games/: math.js  memory.js  reaction.js  snake.js  stroop.js  typing.js
src/styles/: main.css  math.css  memory.css  reaction.css  snake.css  stroop.css  typing.css
